[package]
name = "hyparview"
version = "0.0.6"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of HyParView algorithm"
homepage = "https://github.com/sile/hyparview"
repository = "https://github.com/sile/hyparview"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/hyparview"}
codecov = {repository = "sile/hyparview"}

[dependencies]
rand = "0.5"
