[package]
name = "hyparview"
version = "0.1.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of HyParView algorithm"
homepage = "https://github.com/sile/hyparview"
repository = "https://github.com/sile/hyparview"
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
edition = "2018"

[badges]
travis-ci = {repository = "sile/hyparview"}
codecov = {repository = "sile/hyparview"}

[dependencies]
rand = "0.6"
